2016-02-16 Fred Gleason <fredg@paravelsystems.com>
	* Modified the 'Show Stats' to toggle between showing and hiding
	the 'Stats' dialog'.
2016-02-16 Fred Gleason <fredg@paravelsystems.com>
	* Tuned the layout of the 'Statistics' dialog.
2016-02-16 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'gui' subpackage in 'glassplayer.spec.in'.
2016-02-16 Fred Gleason <fredg@paravelsystems.com>
	* Added a man page for glassplayergui(1).
2016-02-16 Fred Gleason <fredg@paravelsystems.com>
	* Added an '#include <stdlib.h>' statement in
	'src/glassplayer/codec_null.cpp', 'src/glassplayer/dev_file.cpp',
	'src/glassplayer/dev_stdout.cpp' and 'src/glassplayer/serverid.cpp'.
	* Reworked 'src/glassplayer/serverid.cpp' so as not to rely upon
	the presence of the 'QUrl::isLocalFile()' method.
2016-02-16 Fred Gleason <fredg@paravelsystems.com>
	* Added an '#include <stdlib.h>' statement in
	'src/glassplayer/codec_fdk.cpp'.
	* Fixed a bug in 'src/glassplayer/codec_fdk.h' that broke the
	build under RHEL 6.
2016-02-16 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.6.4.
2016-02-17 Fred Gleason <fredg@paravelsystems.com>
	* Modified stat tag names to include spaces.
	* Fixed a bug in 'src/glassplayergui/statsdialog.cpp' that caused
	the label of the 'Show Stats' button to fail to update when the
	dialog was closed by means of the WM-provided close button.
2016-02-17 Fred Gleason <fredg@paravelsystems.com>
	* Set the statistics display panels to be read-only in
	'src/glassplayergui/statspanel.cpp'.
2016-02-18 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.6.5.
2016-04-01 Fred Gleason <fredg@paravelsystems.com>
	* Added support for JACK.
2016-04-04 Fred Gleason <fredg@paravelsystems.com>
	* Added '--server-script-up=' and '--server-script-down=' switches
	to glassplayer(1).
2016-04-04 Fred Gleason <fredg@paravelsystems.com>
	* Fixed typos in the 'DEVICE OPTIONS' section of
	'docs/glassplayer.xml'.