@@ -244,3 +244,5 @@
 2016-04-04 Fred Gleason <fredg@paravelsystems.com>
 	* Fixed typos in the 'DEVICE OPTIONS' section of
 	'docs/glassplayer.xml'.
+2016-04-04 Fred Gleason <fredg@paravelsystems.com>
+	* Fixed a bug in 'src/glassplayer/dev_jack.cpp' that caused xruns.
